# opengl-model-view

./: .clang-format  .clang-tidy  .clangd  .gitignore  LICENSE  README.md  conanfile.txt  configure_conan.sh  meson.build  setup_meson.sh
include/: AssetRegistry.hpp  Camera.hpp  GLContext.hpp  GameWindow.hpp  InputManager.hpp  MaterialSystem.hpp  Math.hpp  Mesh.hpp  MeshLoader.hpp  Model.hpp  ModelFactory.hpp  SdlSubsystem.hpp  Shader.hpp  StdDefs.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  asset_registry.hpp  camera.hpp  game_window.hpp  gl_context.hpp  input_manager.hpp  material_system.hpp  mesh.hpp  mesh_loader.hpp  model.hpp  model_factory.hpp  rapidobj.hpp  sdl_subsystem.hpp  shader.hpp  stddefs.hpp  texture.hpp  vertex.hpp
shaders/: fragment.frag.glsl  vertex.vert.glsl
src/: AssetRegistry.cpp  Camera.cpp  GLContext.cpp  GameWindow.cpp  InputManager.cpp  MaterialSystem.cpp  Mesh.cpp  MeshLoader.cpp  Model.cpp  SdlSubsystem.cpp  Shader.cpp  Texture.cpp  asset_registry.cpp  camera.cpp  game_window.cpp  gl_context.cpp  input_manager.cpp  main.cpp  material_system.cpp  mesh.cpp  mesh_loader.cpp  model.cpp  sdl_subsystem.cpp  shader.cpp  texture.cpp
